Version 0.4.0~dev

	* Move workflow_listing page to index page.
	* Add 'copy workflow' feature.
	* Add 'rename workflow' feature.
	* Add 'create workflow' feature.
	* Add 'edit workflow' feature.
	* Add 'rename item' feature.

Version 0.3.2 Released on 2011/07/27

	* Add workflow label on workflow instance page.
	* Add confirmation for deleting a workflow.
	* Manage progressBar statistics through the progressBar view.
	* Fix bad displaying when a workflow is empty.

Version 0.3.1 Released on 2011/07/26

	* Remove forgotten line in urls.py.

Version 0.3.0 Released on 2011/07/13

	* Provide RESTful API.
	* Complete rewrite of javascript code.

Version 0.2.0 Released on 2011/06/01

	* Release under the LGPL 2.1.
	* Add README.
	* Major overhaul of the database model, extensive use of BackBone.js.

Version 0.1.0 Released on 2011/05/06

	* Initial release.
	* Add webengine-team py files in appteam directory.