@@ -7,21 +7,31 @@
 <script src='/javascript/jquery-ui/jquery-ui.min.js' type='text/javascript'></script>
 <script>
 function deleteWorkflow(workflowId) {
-    $('#dialog-delete-workflow').addClass('visibile').removeClass('hidden');
+    var dialog = $('#dialog-delete-workflow');
+    dialog.addClass('visibile').removeClass('hidden');
     instanceLabel = $('li#instance-' + workflowId + ' a:first-child').html();
     var message = 'This action is irrecoverable !<br />Are you sure to delete <b>' + instanceLabel + '</b> ?';
-    $('#dialog-delete-workflow').find('p').html(message);
-    $('#dialog-delete-workflow').dialog({
+    dialog.find('p').html(message);
+    dialog.dialog({
+        open      : function() { dialog.parents('.ui-dialog-buttonpane button:eq(0)').focus(); },
         resizable : false,
         modal     : true,
         buttons   : {
             'Delete workflow': function() {
-                $(this).find('p').html('Processing...');
-                window.location.pathname = '/workflow/delete/' + workflowId;
+                dialog.find('p').html('Processing...');
+                $.post(
+                    '/workflow/delete/',
+                    JSON.stringify({'workflow_id' : workflowId}),
+                    function (data) {
+                        if ($('li#instance-' + workflowId).parent().find('li').length === 1) {
+                            $('li#instance-' + workflowId).parents('div.workflow_list').remove();
+                        }
+                        $('li#instance-' + workflowId).remove();
+                        dialog.dialog('close');
+                    }
+                );
             },
-            'Cancel': function() {
-                $(this).dialog('close');
-            }
+            'Cancel': function() { dialog.dialog('close'); }
         }
     });
 }
@@ -131,6 +141,7 @@ $(function () {
 <div class="fullclass" id='workflow_management'>
     {% for section in workflow_sections %}
       {% if section.instances|length %}
+      <div class='workflow_list'>
         <h2>{{ section.label }}</h2>
         <ul>
         {% for instance in section.instances %}
@@ -150,6 +161,7 @@ $(function () {
         </li>
         {% endfor %}
         </ul>
+      </div>
       {% endif %}
     {% endfor %}
   <br />
