@@ -6,6 +6,7 @@ Version 0.4.0~dev
 	* Add 'create workflow' feature.
 	* Add 'edit workflow' feature.
 	* Add 'rename item' feature.
+	* Add 'delete item' feature.
 
 Version 0.3.2 Released on 2011/07/27
 
